--- a/theory.tex
+++ b/theory.tex
@@ -723,11 +723,10 @@ Negative group velocity has been experimentally observed in a thin sample. It ma
 The notion of \textit{signal} or \textit{information propagation velocity} is sometimes % TODO cite
 identified with the group velocity, $\vg$. However, this may be misleading, as the differential definition of the group velocity in Eq. (\ref{eq_vg}) enables one to define it for slow-enough modulation only, so that the span of frequencies is narrow and the second derivative, corresponding to the group velocity dispersion, can be neglected.
 
-Assuming the information is carried by a wave modulation that is limited in time (e. g. presence or absence of an optical pulse), one leaves the comfortable approximation of narrow spectrum: from the convolution-multiplication theorem already used in Eq. (\ref{eq_kkresult}), it can be shown that any information carrying function with a finite support has to span over an infinite spectrum. (The proof can be drawn along the line of that such a function does not change, e.g., under the following operation: $$ f(t) \rightarrow f(t) \sgn^2[f(t)] $$)
+Assuming the information is carried by a wave modulation that is limited in time (e. g. presence or absence of an optical pulse), one leaves the comfortable approximation of narrow spectrum: from the convolution-multiplication theorem already used in Eq. (\ref{eq_kkresult}), it can be shown that any information carrying function with a finite support has to span over an infinite spectrum. The proof can be drawn along the line of under multiplication by some finite-supported binary functions, e.g., $$ f(t) \rightarrow f(t) \cdot \mathrm{sign}^2[f(t)], $$
+the original function does not change.
 
-A temporally limited optical pulse will be always more or less distorted upon propagation in dispersive medium where the dispersion curves are not straight. Then the information velocity becomes a problematic term. If the information can be detected exactly in the first moment when the fields deviate from strict zero, one comes to the surprising conclision that, in dispersive media, the information propagates probably with the speed of light. In the opposite example of a highly noisy channel, the pulse can be reliably detected only after most its energy already arrived.
-
-Therefore, the author is convinced that the notion of \textit{information velocity} is too vague unless its exact definition is provided first, and should not be directly associated with the group velocity. 
+A temporally limited optical pulse will be always more or less distorted upon propagation in dispersive medium where the dispersion curves are not straight. Then the information velocity becomes a problematic term. If the information can be detected exactly in the first moment when the fields deviate from strict zero, one comes to the surprising conclusion that, in dispersive media, the information propagates probably with the speed of light. In the opposite example of a highly noisy channel, the pulse may be reliably detected only after most its energy already arrived. To conclude, the author is convinced that the notion of \textit{information velocity} is too vague unless its exact definition is provided first, and should not be directly associated with the group velocity. 
 
 %}}}
 %% TODO \paragraph{Speed of light and causality in nonlocal media}%{{{
