--- a/conclusion.tex
+++ b/conclusion.tex
@@ -105,7 +105,9 @@ are no novel phenomena, just a novel task of homogenisation and possibly enew va
 The research of Metamaterials is typical by taking a relatively novel phenomenon (wave propagation in periodic structure) and
 interpreting it on the basis of a well-developed theory (electrodynamics of homogeneous media). In future, this trend may be opposite --
 that is, new theory motivated by the metamaterial research may find its application on other phenomena.
-One example may be the theory of strongly hyperbolic media, which turns out to be fundamental for electrodynamics in extremely strong magnetic fields \cite{Smolyaninov2011}.
+One example may be the theory of strongly hyperbolic media, which turns out to be fundamental for electrodynamics in extremely strong magnetic fields \cite{smolyaninov2011vacuum}.
+
+
 }
 
 
