--- a/fdphd.bib
+++ b/fdphd.bib
@@ -1528,7 +1528,7 @@ lts.fzu.cz/pdf/d-js.pdf
 %/*}}}*/
 
 
-% % == Theory - printed in Autumn 2014 ==
+% == Theory - printed in Autumn 2014 ==
 % -- EBD theory and nonlocal electrodynamics --/*{{{*/
 @inbook{krowne2007book_agran,
   author={V. M. Agranovich and Yu. N. Gartstein},
@@ -1855,3 +1855,10 @@ lts.fzu.cz/pdf/d-js.pdf
 
 /*}}}*/
 
+% == Other ==
+@article{smolyaninov2011vacuum,
+  title={Vacuum as a hyperbolic metamaterial},
+  author={Smolyaninov, Igor I},
+  journal={arXiv preprint arXiv:1108.2203},
+  year={2011}
+}
